--- a/package.json
+++ b/package.json
@@ -231,6 +231,7 @@
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
     "react": "^16.4.1",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.1.3",
     "react-intl": "^2.3.0",
